# firness

./: .gitignore  Action.h  AnalyzeEDK2.cpp  AnalyzeEDK2.h  AnalyzeHelpers.h  CMakeLists.txt  CodeGeneration.py  Consumer.h  CopyMem-ast.txt  CopyMemTest.c  Dockerfile  JSONHelpers.cpp  Makefile  README.md  TestCodeGeneration.c  TestCodeGeneration.h  Visitor.cpp  Visitor.h  analyze.sh  code_generation_templates.py  compile.sh  compressed_service_results.json  copymem-output.json  data-format.py  dxe-load.txt  entrypoint.sh  firness.dockerfile  firness_dev.dockerfile  firness_pipeline.dockerfile  generate_code.py  generate_debugger_template.py  input.json  input.txt  input_services.txt  jinja-test.py  output-test.json  output.txt  patch.sh  pipeline_analysis.sh  template.jinja  (+4 more)
.github/workflows/: main.yml
HarnessHelpers/: Firness.dsc  FirnessHelpers.c  FirnessHelpers.h  FirnessHelpers_std.h  smi_helpers.h  tsffs-gcc-x86_64.h  userspace_helpers.c  userspace_helpers.h  userspace_types.h
HarnessHelpers/userspace_helpers/: Config.in  external.desc  external.mk  userspace_helpers.c  userspace_helpers.h
HelperScripts/: data-checker.py
Templates/: Firness_main_template.jinja  boot_service_template.jinja  call_function.jinja  code_template.jinja  constant_args.jinja  function_ptr_args.jinja  fuzzable_structs_template.jinja  fuzzable_var_args.jinja  generator_function_calls.jinja  generator_struct_args.jinja  guid_args.jinja  header_template.jinja  inf_template.jinja  ini_template.jinja  output_args.jinja  protocol_template.jinja  runtime_service_template.jinja  working_template.jinja
TestCode/: CopyMem-ast.txt  CopyMemTest.c
edk2/: ast.txt
edk2/Conf/: .AutoGenIdFile.txt  BuildEnv.sh
edk2/OvmfPkg/: OvmfPkgX64.dsc  OvmfPkgX64.fdf
firmware-analyzer/: Action.h  AnalyzeEDK2.cpp  AnalyzeHelpers.h  CMakeLists.txt  JSONHelpers.h
firmware_analyzer/: AnalyzeEDK2.cpp  CMakeLists.txt  Consumer.h  Visitor.cpp  Visitor.h
firness/: CMakeLists.txt  CallGraph.h  CallSiteAnalysis.h  FCP.cpp  FCPAction.h  FCPCallbacks.h  FCPConsumer.h  FileOperationHelpers.h  FunctionDeclAnalysis.h  GeneratorAnalysis.h  GeneratorDeclAnalysis.h  Globals.h  PassHelpers.h  SmiFunctionAnalysis.h  VariableFlow.h
harness_generator/: main.py
harness_generator/common/: generate_library_map.py  types.py  utils.py
harness_generator/data_analysis/: __init__.py  analyze.py  analyze_smi.py
harness_generator/path_trace/: harnesses_template.py  header_template.py  main_template.py
harness_generator/uefi_harness/: dsc_template.py  inf_template.py  (+4 more)
test-analyzer/: CMakeLists.txt  CallExprVisitor.cpp  FCP.cpp  FCPAction.h  FCPConsumer.h  FileOperationHelpers.h  Globals.h  PassHelpers.h  VarDeclVisitor.h  backup_test.cpp  generate_function.cpp  prototype1.cpp  test.cpp
(+3 files in other folders)
